# comtradeOfPython

./: LICENSE  MANIFEST.in  README.md  main.py  merge.py  merge.spec  pyproject.toml  requirements.txt
comtradeParser/: ComtradeParser.py  LICENSE  README.md  __init__.py  comtrade.py  comtrade_parser.py  fault_record.py  requirements.txt  setup.py
comtradeParser/cfg/: CFGParser.py  analog_channel.py  cfg_parser.py  cfg_to_file.py  data_format_type.py  digital_channel.py  fault_header.py  fault_nrate.py  fault_time.py  sample_info.py  sample_rate_info.py
comtradeParser/computation/: fourier.py  impedance.py  sequence.py  zerolocation.py
comtradeParser/dat/: DATParser.py  dat_parser.py  dat_to_file.py
comtradeParser/dmf/: CFG2DMF.py  ChannelGroupParser.py  DMFParser.py  cfg_to_dmf.py  channel_to_group.py
comtradeParser/tests/: testComtradeParser.py
comtradeParser/utils/: constants.py  polarToRectangular.py
data/: xtz.dmf
py3comtrade/: README.md  __init__.py  comtrade.py
py3comtrade/computation/: basic_calc.py  calcium.py  calcius.py  fourier.py  impedance.py  math_polar_rect.py  power.py  sequence.py  vector.py
py3comtrade/dispose/: channel_name.py
py3comtrade/entity/: analog_channel.py  cfg.py  comtrade.py  dat.py  digital_channel.py  fault_header.py  sample_info.py
py3comtrade/merge/: dat_writer.py  merge.py  merge_comtrade.py  modify_cfg.py  modify_entry.py
py3comtrade/model/: __init__.py  analog.py  analog_channel.py  base_channel.py  bus.py  channel.py  channel_num.py  comtrade.py  (+18 more)
tests/: __init__.py  run_test.py  testComtradeParser.py
(+118 files in other folders)
