[project]
name = "py3comtrade"
version = "4.1.7"
description = "解析comtrade中的cfg、dat、dmf等文件，提供配置文件中通道数量，的解析、数值计算和文件合并功能。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "pydantic>=2.11.10",
    "pylint>=3.3.8",
    "xmltodict>=1.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
[tool.setuptools.packages.find]
include = ["py3comtrade*"]
